# LEDP

./: .gitignore
main/: CMakeLists.txt  led_strip_example_main.c
main/modules/Clock_Module/: clock.c  clock.h
main/modules/LEDPanel_Driver/: driver.c  driver.h
main/modules/Menu_Module/: AnimationSet.h  menu.c  menu.h
main/modules/Music_Module/: audio.c  audio.h  fft.c  fft.h  temp.c
main/modules/SmartConfig_Module/: smartconfig.c  smartconfig.h
